# keystone-voms

./: .gbp.conf  .gitignore  .travis.yml  README.md  TESTING.md  do_release.sh  doc-requirements.txt  index.html  params.json  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
debian/: changelog  control  keystone-voms-doc.doc-base  python-keystone-voms.install  rules
debian/keystone/etc/keystone/: voms.json
doc/: Makefile
doc/source/: conf.py  configuration.rst  index.rst  installation.rst  introduction.rst  keystone_voms.rst  modules.rst  overview.rst  requirements.rst  test.rst  troubleshooting.rst  upgrade.rst  usage.rst  voms.rst
etc/: keystone.conf.sample
keystone_voms/: __init__.py  core.py  exception.py  version.py  voms.py  voms_helper.py
keystone_voms/tests/: fakes.py  test_middleware_voms_authn.py
keystone_voms/tests/config_files/: voms_multiple_vos.json  voms_no_vo.json
keystone_voms/tests/funcional/: test_middleware_voms_authn.py
keystone_voms/tests/unit/: test_middleware.py  test_voms.py
tests/: keystone_voms.conf  test_middleware_voms_authn.py  voms.json  voms_authn.conf  voms_no_tenant.json
