[metadata]
version = 2014.1
name = keystone-voms
summary = Keystone VOMS module for Keystone (Icehouse).
description-file =
    README.md
author = Spanish National Research Council (CSIC)
author-email = aloga@ifca.unican.es
home-page = http://ifca.github.io/keystone-voms
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    keystone_voms

[entry_points]
paste.filter_factory =
    voms_filter = keystone_voms.core:VomsAuthNMiddleware.factory

[build_sphinx]
all_files = 1
source-dir = doc/source
build-dir = doc/build

[upload_sphinx]
upload-dir = doc/build/html
